get wierd issues figured out with overflow

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -6,10 +6,11 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  z-index: -2;
 }
 
 #title-container {
-  padding-left: 5%;
+  padding-left: 10%;
 }
 
 #title {
@@ -18,7 +19,7 @@ header {
 }
 
 #icon-container {
-  padding-right: 5%;
+  padding-right: 10%;
   justify-self: right;
 }
 
