--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -2,18 +2,23 @@
 
 #cloud-banner {
   width: 100%;
+  height: 80vw;
+  position: static;
   overflow-x: hidden;
 }
 
 #image-container {
   width: 40vw;
   position: relative;
+  z-index: 99;
+
+  left: 40vw;
+  top: 40vh;
 }
 
 #hello{
   width: 40vw;
   text-align: center;
-  z-index: 99;
 }
 
 .cloud {
@@ -22,62 +27,102 @@
 }
 
 #cloud1 {
-  width: 5vw;
+  width: 25vw;
+  top: -20vh;
+  z-index: 1;
+}
+
+#cloud2 {
+  width: 20vw;
+  top: -10vw;
+  z-index: 1;
+}
+
+#cloud3 {
+  width: 30vw;
+  left: -30vw;
+  top: -40vh;
+  z-index: 2;
+}
+
+#cloud4 {
+  width: 12vw;
+  left: 20vw;
+  top: -20vh;
+}
+
+#cloud5 {
+  width: 30vw;
+  left: 60vw;
+  top: -40vh;
+}
+
+#about-me {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1vw;
+  padding: 4rem;
+  align-items: center;
+}
+
+#profile{
+  width: 25vw;
+}
+
+#contact-container{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  // grid-column-gap: 2vw;
+  justify-items: center;
+  justify-content: center;
+}
+
+#dog-pic {
+  width: 20vw;
 }
 
 @media (max-width: 640px) {
 
   #image-container {
     width: 80vw;
+    
+    left: 0vw;
+    top: 0vh;
   }
 
   #hello{
     width: 80vw;
   }
+
+  #cloud3 {
+    top: -30vh;
+  }
+
+  #about-me {
+    grid-template-columns: none;
+    grid-template-areas: 
+    "text"
+    "pic";
+    padding: 5%;
+  }
+
+  #profile-description{
+    grid-area: text;
+    align-self: center;
+  }
+
+#profile-container{
+    grid-area: pic;
+    text-align: center;
+    align-self: center;
 }
 
+#profile{
+    width: 90vw;
+  }
+}
 
-// #image-container{
-//   width: 400px;
-//   text-align: center;
-//   z-index: 99;
-//   position: absolute; 
-//   top: 20vh;
-//   left: 40vw;
-//   @include responsive($sm){
-//     top: 5vh;
-//     left: 2vh;
-//     width: 100vw;
-//   }
-// }
-
-// // .cloud {
-// //   position: absolute;
-// //   display: inline;
-// // }
-
-// #cloud1 {
-//   top: 0vh;
-//   left: 2vw;
-//   @include responsive($sm){
-//     top: -10vh;
-//   }
-// }
-
-// #cloud2 {
-//   top: 40vh;
-//   left: 75vw;
-// }
-
-// #cloud3 {
-//   top: 0vh;
-//   left: 50vw;
-// }
-
-// #cloud4 {
-//   top: 0vh;
-//   left: 65vw;
-// }
 
 // #cloud5 {
 //   top: 20vh;
